--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "axios": "^1.13.4",
     "chart.js": "^4.5.1",
+    "docxtemplater": "^3.68.3",
+    "lvovich": "^2.1.0",
     "pinia": "^3.0.4",
+    "pizzip": "^3.2.0",
     "vue": "^3.5.25",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.3"
